WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279588
[CSS anchor positioning] WebProcess crash when popover uses anchoring
https://bugs.webkit.org/show_bug.cgi?id=279588
Summary
[CSS anchor positioning] WebProcess crash when popover uses anchoring
Pawel Lampe
Reported
2024-09-12 02:58:50 PDT
Created
attachment 472535
[details]
small repro demo The problem is that element.renderer() is nullptr in the Source/WebCore/style/StyleTreeResolver.cpp:1340
Attachments
small repro demo
(770 bytes, text/html)
2024-09-12 02:58 PDT
,
Pawel Lampe
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2024-09-16 09:22:47 PDT
Thank you for the report. What are you seeing this with? I cannot reproduce with the build of Safari I have on my machine, but unsure if it's newer or older.
Antti Koivisto
Comment 2
2024-09-16 10:18:25 PDT
Thanks for the report. CSS anchor positioning is work-in-progress and not enabled by default yet.
Pawel Lampe
Comment 3
2024-09-16 23:16:28 PDT
Thanks for feedback. As for the issue, I can see a crash when popover is being hidden (after 2 button presses). I've workarounded it with
https://github.com/WebKit/WebKit/pull/33696
Radar WebKit Bug Importer
Comment 4
2024-09-19 03:00:08 PDT
<
rdar://problem/136282104
>
EWS
Comment 5
2024-10-17 06:33:11 PDT
Committed
285334@main
(ba8e7f03c9a9): <
https://commits.webkit.org/285334@main
> Reviewed commits have been landed. Closing PR #33696 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug