[CSS anchor positioning] WebProcess crash when popover uses anchoring https://bugs.webkit.org/show_bug.cgi?id=279588

Reviewed by Antti Koivisto.

When an anchor-positioned element is hidden using display:none, there's no point
processing it in anchoring anymore.

* LayoutTests/TestExpectations:
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::evaluate):
(WebCore::Style::AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayout):

Canonical link: https://commits.webkit.org/285334@main